# Rhyme

./: .clang-format  .gitignore  README.md  limine.cfg  limine.conf  meson.build  test.sh
meta/scripts/: fmt.sh  test.sh
src/: kernel.cpp  kernel.h  meson.build
src/arch/: meson.build
src/arch/x86_64/: common.cpp  common.h  entry.cpp  meson.build
src/boot/: limine.h
src/con/: console.cpp  console.h  meson.build
src/lib/: crt.cpp  meson.build
src/term/: console.cpp  console.h
subprojects/: flanterm.wrap
subprojects/packagefiles/: chdrs.diff  cxxhdrs.diff  flanterm.diff
targets/: x86_64-clang.ini
